crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__coord__tests__all_relative.snap
---
source: crates/mcf/src/syntax/grammar/coord.rs
expression: "parse_coord(\"~0 ~5 ~1\")"
---
Root(File)
Group(Coord) at 0:0 - 0:8 {
    Group(CoordPart) at 0:0 - 0:2 {
        Token(Tilde) `~` at 0:0 - 0:1
        Joined(Float) `0` at 0:1 - 0:2
    }
    Token(Whitespace) ` ` at 0:2 - 0:3
    Group(CoordPart) at 0:3 - 0:5 {
        Token(Tilde) `~` at 0:3 - 0:4
        Joined(Float) `5` at 0:4 - 0:5
    }
    Token(Whitespace) ` ` at 0:5 - 0:6
    Group(CoordPart) at 0:6 - 0:8 {
        Token(Tilde) `~` at 0:6 - 0:7
        Joined(Float) `1` at 0:7 - 0:8
    }
}

